# stochhs

./: .gitignore  pyproject.toml  requirements.txt  strucutre.txt  test.txt
docs/theory/: gaussian.py  stats_primitives.py
